# MedicalApp_Backend

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1e1711655606_create_hospital_table.py  4de0425a531b_create_user_table.py  74efe208391f_replace_id_by_slug.py  8ec1418fd4ff_table_hospital.py  9e7c292da241_create_hospital_table.py  aacfb83cc363_create_doctor_table.py  b05cc5af235b_replace_age_by_date_birth.py
app/: main.py
app/auth/: crud.py  routes.py  schemas.py
app/core/: config.py  database.py  security.py
app/doctor/: crud.py  models.py  routes.py  schemas.py
app/hospital/: crud.py  models.py  routes.py  schemas.py
app/user/: crud.py  models.py  routes.py  schemas.py
app/utils/: emails.py  geolocation.py
